src/components/base.css
@font-face {
  font-family: "Avenir";
  font-weight: 400;
  font-style: normal;
  src: url("/avenir-400.woff2") format("woff2");
  font-display: swap;
}

body {
  font-family: "Avenir", Tahoma, Arial, Helvetica, sans-serif;
  font-size: 1em;
  line-height: 1.65;
  color: #373F49;
  background: #eee;
  margin: 0;
}

img {
  display: block;
  width: 100%;
}

h1,
h2,
h3 {
  font-size: 2em;
  font-weight: normal;
}

a {
  color: currentColor;
}

.wrapper {
  width: calc(100% - 10vmin);
  margin: 0 auto;
  padding: 5vmin 0;
}

/**
 * article grid
 */
.article-list {
  margin: 0;
  padding: 0;
  list-style: none;
  display: grid;
  grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
  grid-gap: 5vmin;
}

.columnist {
  display: flex
}

.columnist .articles {
  flex: 1;
  background: white;
}

.columnist .plugs {
  display: none;
  flex: 0;
  background-color: rgba(255,255,255,0.8);
  padding: 10px;
}

@media(min-width: 1000px) {
  .columnist .articles {
    flex: 0.8;
  }

  .columnist .plugs {
    display: block;
    flex: 0.2;
  }
}

.plug .body {
  border-bottom: 1px solid #ddd ;
  margin: 10px 0;
}

/**
 *
 */
.section-headline {
  padding: 0 0 0.4em 0;
  margin: 0 0 5vmin 0;
  border-bottom: 1px solid #ddd;
}

/**
 *
 */
.list-inline {
  margin: 0;
  padding: 0;
  list-style: none;
}

.list-inline li {
  display: inline-block;
}

.feet {
  display: flex;
  flex-direction: row;
  color: #fff;
  background-color: #333;
  text-align: center;
  padding: 10px;
}

.feet .foot .title {
  font-size: 1.5em;
}

.feet .foot {
  flex: 1;
  margin: 30px;

  text-align: left;
}

.feet .foot p {
  margin: 0;
}

.feet .foot a:link {
  text-decoration: none;
}

